changing expand icon to toggle

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
       it's a brand. Let us brand you</br>
   
       Connect with the world.</br>
-      <p class="smallmsg">develop our websites to suit your clients needs</p> 
+      <p class="smallmsg">We develop our websites to suit your clients needs</p> 
       </div>
     
   </div>
   
     <div bar_menu>
   <button onclick="dropdown" class="openMenu btn btn-primary"><span class="material-symbols-outlined">
-expand_more
-</span></i></button>
+    toggle_off
+    </span></button>
   
   <div id="bar_menu" class="dropped_content">
   <ul class="mainMenu">
