--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </pre></div>
   </div>
   
-  <div class="switch"><img src="Multi-device5.png" alt="toggle selection" width="600px" height="750px"></div>
+  <div class="switch"><img defer src="Multi-device5.png" alt="toggle selection" width="600px" height="750px"></div>
 </div>
 <div class="type_of_services">
   <div class="sector">
