--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     
     </div>
     <div class="subhead">
-    <div class="main_heading">
-      <p><img src="Website Creator3.png" width="auto" height="700px" alt="a team creating a website"> It is more than just a website,</br>
+    <div class="main_heading"> 
+      <p><img defer src="Website Creator3.png" width="auto" height="700px" alt="a team creating a website"> It is more than just a website,</br>
       it's a brand. Let us brand you</br>
   
       Connect with the world.</br>
