--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="entire_page">
 <div class="top">
-    
+    <div class="topimg"></div>
   <nav>
     
     <div class="subhead">
