--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Website developer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <link rel="stylesheet" href="stylebp1.css">
+  <link rel="stylesheet" href="index.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -27,7 +27,7 @@
     
     <div class="subhead">
     <div class="main_heading"> 
-      It is more than just a website,</br>
+      It is more than just a website</br>
       it's a brand. Let us brand you</br>
   
       Connect with the world.</br>
@@ -37,13 +37,13 @@
   </div>
   
     <div bar_menu>
-  <button onclick="dropdown" class="openMenu btn btn-primary"><span class="material-symbols-outlined">
+  <button class="openMenu btn btn-dark"><span class="material-symbols-outlined">
     toggle_off
     </span></button>
-  
-  <div id="bar_menu" class="dropped_content">
+  <div class="services">
+  <div class="dropped_content">
   <ul class="mainMenu">
-    <li>Our services@R Consulting:</li>
+    <p>Our services@R Consulting:</p>
     <li>Business consulting</li>
     <ul>
       <li>business improvement solutions</li>
@@ -54,6 +54,7 @@
     </ul>
     <li>Website development</li>
   </ul>
+  </div>
 </div>
 
 
@@ -132,10 +133,11 @@
 </div>
 <div class="field_form" >
   <div class="field" id="connect_link">
-    <h4><br />Please leave your details and enquiry below</h4><br />
+    <h4><br /></h4><br />
     <span><button class="close">&times;</button></span>
     <form>
-    <ul>
+    <ul class="inquiry">
+      <h3>Please leave your details and inquiry below</h3>
       <li><label for="fname">Full Name</label><br />
       <input type="text" name="username" id="firstlast"></li>
       <li><label for="email">Email</label><br />
@@ -143,7 +145,7 @@
       <li><label for="enquiry-description">Enquiry-Description</label><br />
                             <textarea name="story" maxlength="400" id="profile" rows="4" 
                      cols="30" placeholder="No more than 400 characters long. What are you looking for?"></textarea></li>
-                     <input type="submit"> 
+                     <input type="submit">
     </ul>
     </form>
   </div>
